--- a/css/common/common.css
+++ b/css/common/common.css
@@ -60,7 +60,11 @@ a:hover{
 	width:289px;
 	height:28px;
 	float:left;
-	background:url(../../images/mainLogo.png) center no-repeat;
+	color: #fff;
+	font-size: 30px;
+	text-shadow: 0px 1px 2px #000;
+	line-height: 25px;
+    font-weight: 600;
 	margin:16px 0 0 15px;
 	}		
 .com-hederMenu{
