--- a/css/common/common.css
+++ b/css/common/common.css
@@ -36,7 +36,7 @@ a{
 	text-decoration:none !important;
 	}
 a:hover{
-	color:#0093DD !important;
+	color:rgb(216, 47, 5) !important;
 	}		
 /*统一后台背景色、边框色	*/
 .com-bg{
