--- a/css/login.css
+++ b/css/login.css
@@ -8,7 +8,7 @@ form,
 input {
 	margin: 0;
 	padding: 0;
-	background: url(../images/loginBG.jpg);
+	background: url(../images/loginBG.png);
 	filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(sizingMethod='scale')";
 	-moz-background-size: 100%;
 	background-size: 100%;
@@ -17,58 +17,77 @@ input {
 }
 
 .loginBox {
-	width: 560px;
-	height: 450px;
+	width: 474px;
+	height: 466px;
 	position: absolute;
-	left: 50%;
+	right: 8.89%;
 	top: 50%;
 	margin-left: -280px;
 	margin-top: -225px;
-	background: rgba(255, 255, 255, 0.4);
-	border-radius: 5px;
+	background: #FFFFFF;
+	border-radius: 8px;
 }
 
 .loginTitle {
-	width: 416px;
-	height: 45px;
+	width: 126px;
+	height: 70px;
 	margin: 0 auto;
-	margin-top: 45px;
+	margin-top: 58px;
 	background: url(../images/loginTitle.png) center no-repeat;
-	margin-bottom: 30px;
+	background-size: 100% 100%;
+	margin-bottom: 35px;
 }
 
 .userInput {
-	width: 416px;
-	height: 52px;
-	background: url(../images/userInput.png) no-repeat;
+	width: 404px;
+	height: 50px;
+	background: #EFEFEF;
 	margin: 0 auto;
-	margin-top: 10px;
+	margin-top: 19px;
+	border-radius: 8px;
 }
 
 .buttonDiv {
-	width: 416px;
-	height: 52px;
+	width: 162px;
+	height: 45px;
 	margin: 0 auto;
-	margin-top: 27px;
+	margin-top: 66px;
+	background: url(../images/loginButton.png) no-repeat;
+	background-size: 100% 100%;
 }
 
-.userInput label {
-	width: 60px;
-	height: 52px;
-	line-height: 52px;
+.userImg {
+	width: 57px;
+	height: 22px;
 	font-size: 16px;
 	text-align: center;
 	color: #555656;
 	float: left;
-	margin-left: 50px;
+	margin-top: 15px;
+	margin-left: 17px;
 	font-weight: normal;
+	background: url(../images/accountImg.png) no-repeat;
+	background-size: 100% 100%;
+}
+.pwdImg{
+	width: 57px;
+	height: 22px;
+	font-size: 16px;
+	text-align: center;
+	color: #555656;
+	float: left;
+	margin-top: 15px;
+	margin-left: 17px;
+	font-weight: normal;
+	background: url(../images/pwdImg.png) no-repeat;
+	background-size: 100% 100%;
 }
 
 .userInput input {
 	width: 290px;
 	height: 52px;
 	line-height: 52px;
-	padding-left: 10px;
+	padding-left: 20px;
 	border: 0;
 	color: #737373;
 	background: none;
@@ -76,10 +95,6 @@ input {
 	font-size: 18px;
 }
 
-.passInput {
-	background: url(../images/passInput.png) no-repeat;
-	margin-top: 18px;
-}
 
 .codeInput {
 	background: url(../images/codeInput.png) no-repeat;
@@ -100,13 +115,11 @@ input {
 	width: 162px;
 	height: 45px;
 	border: 0px;
-	background: #0683B1;
-	line-height: 45px;
+	background:url(../images/loginButton.png) no-repeat;
+	background-size: 100% 100%;
 	color: #fff;
 	text-align: center;
 	font-size: 18px;
-	/*margin-top:27px;
-	margin-left:73px;*/
 	cursor: pointer;
 }
 
